# mcp-ollama-python

./: .gitignore  .mcp_env_vars.json  .pre-commit-config.yaml  404.html  AGENTS.md  LICENSE  README.md  index.html  mcp-ollama-python.spec  mcp.json  mkdocs.yml  ollama-mcp-python.spec  pyproject.toml  pytest.ini  sitemap.xml  test_import.py  test_import_detailed.py  test_mcp_import.py
.github/workflows/: docs.yml  release.yml
SERVER_CONTROL/: index.html
architecture/: index.html
configuration/: index.html
development/: index.html
docs/: MCP_ENHANCEMENTS.md  SECURITY.md  SERVER_CONTROL.md  architecture.md  configuration.md  development.md  index.md  installation.md  mcp_interactive.md  tools.md  vscode.md  windsurf.md
examples/: get_spanish_poem.py  tools.md
installation/: index.html
mcp_interactive/: index.html
scripts/: mcp_interactive.py  run_tests.py  server_control.py  win_ollama_service_install_nssm.md  win_ollama_service_install_nssm.ps1
search/: search_index.json
src/mcp_ollama_python/: __init__.py  __main__.py  autoloader.py  main.py  models.py  ollama_client.py  response_formatter.py  security.py  server.py
src/mcp_ollama_python/examples/: get_spanish_poem.py
src/mcp_ollama_python/scripts/: mcp_interactive.py  server_control.py
src/mcp_ollama_python/tools/: __init__.py  chat.py  delete.py  embed.py  execute.py  generate.py  list.py  ps.py  pull.py  show.py
src/ollama_mcp_python/: __main__.py  autoloader.py  main.py  models.py  ollama_client.py  response_formatter.py  server.py
src/ollama_mcp_python/tools/: chat.py  embed.py  list.py
tests/: __init__.py  conftest.py  test_autoloader.py  test_main.py  test_mcp_capabilities.py  test_models.py  test_ollama_client.py  test_response_formatter.py  test_security.py  test_server.py
tools/: index.html
vscode/: index.html
windsurf/: index.html
