[tool.poetry]
name = "ollama-mcp-python"
version = "0.1.3"
description = "Model Context Protocol server that proxies local Ollama to MCP clients like Windsurf and VS Code"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ollama_mcp_python", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.0"
pydantic = "^2.7.0"
rich = "^13.7.0"
mcp = "^1.0.0"
psutil = "^7.1.3"

[tool.poetry.scripts]
ollama-mcp-python = "ollama_mcp_python.main:run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
