[tool.poetry]
name = "mcp-ollama-python"
version = "1.0.6"
description = "Model Context Protocol server that proxies local Ollama to MCP clients like Windsurf and VS Code"
authors = ["Pedja Blagojevic <pb@internetics.net>"]
readme = "README.md"
packages = [{include = "mcp_ollama_python", from = "src"}]
license = "MIT"
homepage = "https://github.com/pblagoje/mcp-ollama-python"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
httpx = "^0.27.0"
pydantic = "^2.7.0"
rich = "^13.7.0"
mcp = "^1.0.0"
psutil = "^7.1.3"
tzdata = "^2024.1"

[tool.poetry.scripts]
mcp-ollama-python = "mcp_ollama_python.main:run"
mcp-interactive = "mcp_ollama_python.scripts.mcp_interactive:main"
mcp-server-control = "mcp_ollama_python.scripts.server_control:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pyinstaller = "^6.18.0"
pre-commit = "^4.5.1"
black = "^26.1.0"
flake8 = "^7.3.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
